# Thai-Cybersecurity-RAG

./: README.md  pyproject.toml
notebook/: experiment.ipynb
src/: app.py  prompt_template.py  rag_pipeline.py  retrieval.py
src/extractors/: slide_deck.py  textbook.py  thai_pdf.py
