[project]
name = "cyber-rag-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.4.1",
    "gradio>=3.36.1",
    "langchain-chroma>=0.2.6",
    "langchain-google-genai>=2.1.12",
    "langchain-text-splitters>=0.3.11",
    "langchain[google-genai]>=0.3.27",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "pythainlp>=5.2.0",
    "python-dotenv>=1.2.1",
    "python-magic-bin>=0.4.14",
    "unstructured[pdf]>=0.18.3",
]
